[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
authors = [{name = "Tom de Geus", email = "tom@geus.me"}]
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
    "click",
    "enstat >=0.9.1",
    "FrictionQPotSpringBlock >=0.22.7",
    "GooseEYE >=0.7.1",
    "GooseFEM >=1.1.0",
    "GooseHDF5 >=0.22.0",
    "h5py",
    "numpy",
    "prettytable",
    "prrng >=1.11.0",
    "pyyaml",
    "shelephant >=0.23.0",
    "tqdm",
    "XDMFWrite_h5py >=0.2.0",
]
description = "Shell between data and FrictionQPotSpringBlock"
dynamic = ["version"]
name = "depinning_inertia_2024"
readme = "README.md"
requires-python = ">=3.6"

[project.scripts]
Dynamics_AverageSystemSpanning = "depinning_inertia_2024.Dynamics:_AverageSystemSpanning_cli"
Dynamics_Run = "depinning_inertia_2024.Dynamics:_Run_cli"
EventMap_Info = "depinning_inertia_2024.EventMap:_Info_cli"
EventMap_Paraview = "depinning_inertia_2024.EventMap:_Paraview_cli"
EventMap_Plot = "depinning_inertia_2024.EventMap:_Plot_cli"
EventMap_Run = "depinning_inertia_2024.EventMap:_Run_cli"
Flow_EnsemblePack = "depinning_inertia_2024.Flow:_EnsemblePack_cli"
Flow_Generate = "depinning_inertia_2024.Flow:_Generate_cli"
Flow_Plot = "depinning_inertia_2024.Flow:_Plot_cli"
Flow_Run = "depinning_inertia_2024.Flow:_Run_cli"
QuasiStatic_CheckData = "depinning_inertia_2024.QuasiStatic:_CheckData_cli"
QuasiStatic_CheckDynamics = "depinning_inertia_2024.QuasiStatic:_CheckDynamics_cli"
QuasiStatic_CheckFastLoad = "depinning_inertia_2024.QuasiStatic:_CheckFastLoad_cli"
QuasiStatic_EnsembleInfo = "depinning_inertia_2024.QuasiStatic:_EnsembleInfo_cli"
QuasiStatic_ForceCurrentDataVersion = "depinning_inertia_2024.QuasiStatic:_ForceCurrentDataVersion_cli"
QuasiStatic_Generate = "depinning_inertia_2024.QuasiStatic:_Generate_cli"
QuasiStatic_GenerateFastLoad = "depinning_inertia_2024.QuasiStatic:_GenerateFastLoad_cli"
QuasiStatic_JobRerun = "depinning_inertia_2024.QuasiStatic:_JobRerun_cli"
QuasiStatic_Paraview = "depinning_inertia_2024.QuasiStatic:_Paraview_cli"
QuasiStatic_Plot = "depinning_inertia_2024.QuasiStatic:_Plot_cli"
QuasiStatic_PlotStateAfterSystemSpanning = "depinning_inertia_2024.QuasiStatic:_PlotStateAfterSystemSpanning_cli"
QuasiStatic_Run = "depinning_inertia_2024.QuasiStatic:_Run_cli"
QuasiStatic_StateAfterSystemSpanning = "depinning_inertia_2024.QuasiStatic:_StateAfterSystemSpanning_cli"
QuasiStatic_StructureAfterSystemSpanning = "depinning_inertia_2024.QuasiStatic:_StructureAfterSystemSpanning_cli"
QuasiStatic_UpdateData = "depinning_inertia_2024.QuasiStatic:_UpdateData_cli"
Relaxation_EnsembleInfo = "depinning_inertia_2024.Relaxation:_EnsembleInfo_cli"
Relaxation_Run = "depinning_inertia_2024.Relaxation:_Run_cli"
Trigger_CheckData = "depinning_inertia_2024.Trigger:_CheckData_cli"
Trigger_EnsembleInfo = "depinning_inertia_2024.Trigger:_EnsembleInfo_cli"
Trigger_FilterCompleted = "depinning_inertia_2024.Trigger:_FilterCompleted_cli"
Trigger_Generate = "depinning_inertia_2024.Trigger:_Generate_cli"
Trigger_JobRerun = "depinning_inertia_2024.Trigger:_JobRerun_cli"
Trigger_Merge = "depinning_inertia_2024.Trigger:_Merge_cli"
Trigger_MergeBatch = "depinning_inertia_2024.Trigger:_MergeBatch_cli"
Trigger_Paraview = "depinning_inertia_2024.Trigger:_Paraview_cli"
Trigger_Run = "depinning_inertia_2024.Trigger:_Run_cli"
Trigger_UpdateData = "depinning_inertia_2024.Trigger:_UpdateData_cli"

[project.urls]
Source = "https://github.com/tdegeus/depinning_inertia_2024"

[tool.setuptools_scm]
write_to = "depinning_inertia_2024/_version.py"
