[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
authors = [{name = "Tom de Geus", email = "tom@geus.me"}]
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
    "click",
    "enstat >=0.9.1",
    "FrictionQPotSpringBlock >=0.22.7",
    "GooseEYE >=0.7.1",
    "GooseFEM >=1.1.0",
    "GooseHDF5 >=0.22.0",
    "h5py",
    "numpy",
    "prettytable",
    "prrng >=1.11.0",
    "pyyaml",
    "shelephant >=0.23.0",
    "tqdm",
    "XDMFWrite_h5py >=0.2.0",
]
description = "Shell between data and FrictionQPotSpringBlock"
dynamic = ["version"]
name = "depinning_inertia_2024"
readme = "README.md"
requires-python = ">=3.6"

[project.scripts]
Dynamics_AverageSystemSpanning = "depinning_inertia_2024.Dynamics:AverageSystemSpanning"
Dynamics_Run = "depinning_inertia_2024.Dynamics:Run"
EventMap_Info = "depinning_inertia_2024.EventMap:Info"
EventMap_Paraview = "depinning_inertia_2024.EventMap:Paraview"
EventMap_Plot = "depinning_inertia_2024.EventMap:Plot"
EventMap_Run = "depinning_inertia_2024.EventMap:Run"
Flow_EnsemblePack = "depinning_inertia_2024.Flow:EnsemblePack"
Flow_Generate = "depinning_inertia_2024.Flow:Generate"
Flow_Plot = "depinning_inertia_2024.Flow:Plot"
Flow_Run = "depinning_inertia_2024.Flow:Run"
QuasiStatic_CheckData = "depinning_inertia_2024.QuasiStatic:CheckData"
QuasiStatic_CheckDynamics = "depinning_inertia_2024.QuasiStatic:CheckDynamics"
QuasiStatic_CheckFastLoad = "depinning_inertia_2024.QuasiStatic:CheckFastLoad"
QuasiStatic_EnsembleInfo = "depinning_inertia_2024.QuasiStatic:EnsembleInfo"
QuasiStatic_ForceCurrentDataVersion = "depinning_inertia_2024.QuasiStatic:ForceCurrentDataVersion"
QuasiStatic_Generate = "depinning_inertia_2024.QuasiStatic:Generate"
QuasiStatic_GenerateFastLoad = "depinning_inertia_2024.QuasiStatic:GenerateFastLoad"
QuasiStatic_JobRerun = "depinning_inertia_2024.QuasiStatic:JobRerun"
QuasiStatic_Paraview = "depinning_inertia_2024.QuasiStatic:Paraview"
QuasiStatic_Plot = "depinning_inertia_2024.QuasiStatic:Plot"
QuasiStatic_PlotStateAfterSystemSpanning = "depinning_inertia_2024.QuasiStatic:PlotStateAfterSystemSpanning"
QuasiStatic_Run = "depinning_inertia_2024.QuasiStatic:Run"
QuasiStatic_StateAfterSystemSpanning = "depinning_inertia_2024.QuasiStatic:StateAfterSystemSpanning"
QuasiStatic_StructureAfterSystemSpanning = "depinning_inertia_2024.QuasiStatic:StructureAfterSystemSpanning"
QuasiStatic_UpdateData = "depinning_inertia_2024.QuasiStatic:UpdateData"
Relaxation_EnsembleInfo = "depinning_inertia_2024.Relaxation:EnsembleInfo"
Relaxation_Run = "depinning_inertia_2024.Relaxation:Run"
Trigger_CheckData = "depinning_inertia_2024.Trigger:CheckData"
Trigger_EnsembleInfo = "depinning_inertia_2024.Trigger:EnsembleInfo"
Trigger_FilterCompleted = "depinning_inertia_2024.Trigger:FilterCompleted"
Trigger_Generate = "depinning_inertia_2024.Trigger:Generate"
Trigger_JobRerun = "depinning_inertia_2024.Trigger:JobRerun"
Trigger_Merge = "depinning_inertia_2024.Trigger:Merge"
Trigger_MergeBatch = "depinning_inertia_2024.Trigger:MergeBatch"
Trigger_Paraview = "depinning_inertia_2024.Trigger:Paraview"
Trigger_Run = "depinning_inertia_2024.Trigger:Run"
Trigger_UpdateData = "depinning_inertia_2024.Trigger:UpdateData"

[project.urls]
Source = "https://github.com/tdegeus/depinning_inertia_2024"

[tool.setuptools_scm]
write_to = "depinning_inertia_2024/_version.py"
